--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+pipetaxon/settings.py
 data/
 .idea/
 # Byte-compiled / optimized / DLL files
@@ -98,9 +99,6 @@ venv.bak/
 
 # Rope project settings
 .ropeproject
-
-# mkdocs documentation
-/site
 
 # mypy
 .mypy_cache/
